@@ -12,12 +12,12 @@ border_color = #d1d1d1 34
 
 rounded = 3
 border_width = 1
-background_color = #000000 40
-border_color = #d1d1d1 34
+background_color = #96b3a9 60
+border_color = #d1d1d1 70
 
 rounded = 2
 border_width = 0
-background_color = #d1d1d1 24
+background_color = #707070 40
 border_color = #d1d1d1 40
 
 #---------------------------------------------
@@ -43,22 +43,22 @@ taskbar_background_id = 2
 #---------------------------------------------
 # TASKS
 #---------------------------------------------
-task_icon = 1
+task_icon = 0
 task_text = 1
 task_width = 26
 task_centered = 1
-task_padding = 4 3
-task_font = sans bold 7.5
-task_font_color = #ffffff 60
-task_active_font_color = #ffffff 90
+task_padding = 1 5
+task_font = sans 7.5
+task_font_color = #ffffff 80
+task_active_font_color = #ffffff 100
 task_background_id = 0
 task_active_background_id = 3
 
 #---------------------------------------------
 # SYSTRAYBAR
 #---------------------------------------------
-#systray_padding = 6 3 5
-systray_background_id = 2
+systray_padding = 0 28 2
+systray_background_id = 0
 
 #---------------------------------------------
 # CLOCK
@@ -68,7 +68,7 @@ time1_font = sans bold 8
 #time2_format = %A %d %B
 time2_format = %A %d
 time2_font = sans 7
-clock_font_color = #ffffff 60
+clock_font_color = #ffffff 90
 clock_padding = 4 2
 clock_background_id = 2
 clock_lclick_command = xclock
@@ -82,9 +82,9 @@ battery_low_status = 10
 battery_low_cmd = notify-send "battery low"
 bat1_font = sans bold 7
 bat2_font = sans 7
-battery_font_color = #ffffff 60
+battery_font_color = #ffffff 90
 battery_padding = 0 0
-battery_background_id = 0
+battery_background_id = 2
 
 #---------------------------------------------
 # MOUSE ACTION ON TASK
